--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,1 +1,18 @@
 /* Enter your custom styles here */
+
+.sapUiCalItemType03>.sapUiCalItemText {
+    box-shadow: inset 0 -0.25rem 0 #1cb048 !important;
+}
+
+.sapUiCalItemType03.sapUiCalItemSel>.sapUiCalItemText {
+    box-shadow: inset 0 -0.25rem 0 #1cb048, inset 0 -0.33rem #ffffff !important;
+}
+
+
+.sapUiCalItemType02.sapUiCalItemSel>.sapUiCalItemText {
+    box-shadow: inset 0 -0.25rem 0 #ff7e29, inset 0 -0.33rem #ffffff !important;
+}
+
+.sapUiCalItemType02>.sapUiCalItemText {
+    box-shadow: inset 0 -0.25rem 0 #ff7e29 !important;
+}
